# captcha_generator_rust

./: Cargo.toml
src/: lib.rs  main.rs
src/data/: db.rs
src/routes/: echo.rs  user.rs
tests/: basic_test.rs
tests/common/: mod.rs
