[package]
name = "captcha_generator"
version = "0.1.0"
authors = ["vasil"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["helmet", "uuid"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
rand = "0.7.3"
chrono = { version = "0.4.19", features = ["serde"] }
rust-argon2 = "0.8.2"

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.59"